day1/step2/hello-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      imagePullSecrets:
        - name: auth-master3-registry
      containers:
        - name: hello
          image: registry.master3.takima.io/guide/kubernetes-resources/hello_world:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 400m
          ports:
            - containerPort: 3000
