day1/step2/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: hello-ingress
spec:
  rules:
    - host: hello.eloi-bernard.takima.cloud
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
  # tls:
  #   - hosts:
  #       - hello.eloi-bernard.takima.cloud
  #     secretName: app-wildcard
